--- a/Destiny/public_html/html/Character/character.html
+++ b/Destiny/public_html/html/Character/character.html
@@ -6,7 +6,8 @@
         <link href="../../css/Character/character.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../../JS/navigation.js"></script>
-    </head>
+        <script src="../../JS/jquery.js" type="text/javascript"></script>
+   </head>
     <body>
         <div id="control">
             <script src="../../JS/Character/character.js"></script>
