--- a/Destiny/public_html/html/Item/items.html
+++ b/Destiny/public_html/html/Item/items.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
         <link href="../../css/Item/items.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <script src="../../JS/navigation.js"></script>
+        <script src="../../JS/jquery.js" type="text/javascript"></script>
+        <script src="../../JS/navigation.js"></script>
     </head>
     <body>     
         <div id="control">
