--- a/Destiny/public_html/html/Character/addEditCharacter.html
+++ b/Destiny/public_html/html/Character/addEditCharacter.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Items</title>
+        <title>AddOrEdit</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
-        <link href="../../css/Spell/spells.css" rel="stylesheet" type="text/css"/>
+        <link href="../../css/Character/characters.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../../JS/jquery.js" type="text/javascript"></script>
-         <script src="../../JS/navigation.js"></script>
+        <script src="../../JS/jquery.js"></script>
+        <script src="../../JS/navigation.js"></script>
     </head>
     <body>     
         <div id="control">
-            <script src="../../JS/Spell/spells.js"></script>
+            <script src="../../JS/Character/addEditCharacter.js"></script>
         </div>
     </body>
 </html>
