--- a/Destiny/public_html/html/Enemy/enemies.html
+++ b/Destiny/public_html/html/Enemy/enemies.html
@@ -7,6 +7,7 @@
         <link href="../../css/Enemy/enemies.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <script src="../../JS/navigation.js"></script>
+         <script src="../../JS/jquery.js" type="text/javascript"></script>
     </head>
     <body>     
         <div id="control">
