--- a/Destiny/public_html/html/Location/location.html
+++ b/Destiny/public_html/html/Location/location.html
@@ -6,6 +6,7 @@
         <link href="../../css/Location/location.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../../JS/navigation.js"></script>
+        <script src="../../JS/jquery.js"></script>
     </head>
     <body>
         <div id="control">
