--- a/Destiny/public_html/html/Location/locations.html
+++ b/Destiny/public_html/html/Location/locations.html
@@ -7,6 +7,7 @@
         <link href="../../css/Location/locations.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <script src="../../JS/navigation.js"></script>
+         <script src="../../JS/jquery.js"></script>
     </head>
     <body>     
         <div id="control">
