--- a/Destiny/public_html/html/Character/editCharacter.html
+++ b/Destiny/public_html/html/Character/editCharacter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AddOrEdit</title>
+        <title>Editing</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
         <link href="../../css/Character/addEditCharacter.css" rel="stylesheet" type="text/css"/>
@@ -11,7 +11,7 @@
     </head>
     <body>     
         <div id="control">
-            <script src="../../JS/Character/addEditCharacter.js"></script>
+            <script src="../../JS/Character/editCharacter.js"></script>
         </div>
     </body>
 </html>
