add, change, delete btn added for alls

--- a/Destiny/public_html/html/Character/addCharacter.html
+++ b/Destiny/public_html/html/Character/addCharacter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AddOrEdit</title>
+        <title>Creating</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
         <link href="../../css/Character/addEditCharacter.css" rel="stylesheet" type="text/css"/>
@@ -12,6 +12,7 @@
     <body>     
         <div id="control">
             <script src="../../JS/Character/addEditCharacter.js"></script>
+            <script src="../../JS/Character/addCharacter.js"></script>
         </div>
     </body>
 </html>
