--- a/Destiny/public_html/html/Character/character.html
+++ b/Destiny/public_html/html/Character/character.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Characters</title>
+        <title>Character</title>
         <meta charset="UTF-8">
         <link href="../../css/Character/character.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
