--- a/Destiny/public_html/html/Location/locations.html
+++ b/Destiny/public_html/html/Location/locations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Items</title>
+        <title>Locations</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
         <link href="../../css/Location/locations.css" rel="stylesheet" type="text/css"/>
