--- a/Destiny/public_html/html/Enemy/addEnemy.html
+++ b/Destiny/public_html/html/Enemy/addEnemy.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Editing</title>
+        <title>Creating</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>   
-        <link href="../../css/Character/addEditCharacter.css" rel="stylesheet" type="text/css"/>
+        <link href="../../css/Enemy/addEditEnemy.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../../JS/jquery.js"></script>
         <script src="../../JS/navigation.js"></script>
     </head>
     <body>     
         <div id="control">
-            <script src="../../JS/Character/addEditCharacter.js" type="text/javascript"></script>
-            <script src="../../JS/Character/editCharacter.js"></script>
+            <script src="../../JS/Enemy/addEditEnemy.js" type="text/javascript"></script>
+            <script src="../../JS/Enemy/addEnemy.js" type="text/javascript"></script>
         </div>
     </body>
 </html>
