--- a/Destiny/public_html/html/Item/item.html
+++ b/Destiny/public_html/html/Item/item.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Characters</title>
+        <title>Item</title>
         <meta charset="UTF-8">
         <link href="../../css/Item/item.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../../JS/jquery.js" type="text/javascript"></script>
         <script src="../../JS/navigation.js"></script>
     </head>
     <body>
