--- a/Destiny/public_html/html/Spell/spell.html
+++ b/Destiny/public_html/html/Spell/spell.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link href="../../css/Spell/spell.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../../JS/jquery.js" type="text/javascript"></script>
         <script src="../../JS/navigation.js"></script>
     </head>
     <body>
